[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/player_died.gd" type="Script" id=1]
[ext_resource path="res://assets/PopUpMenu.png" type="Texture" id=2]
[ext_resource path="res://assets/PopUpMenuButton.png" type="Texture" id=3]

[node name="player_died" type="PopupMenu"]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = -247.388
margin_top = 142.365
margin_right = 239.612
margin_bottom = 327.365
texture_normal = ExtResource( 3 )

[node name="GameInfo" type="TextEdit" parent="."]
margin_left = -248.0
margin_top = -90.0
margin_right = -4.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
text = "testing"
v_scroll_speed = 0.0
wrap_enabled = true

[connection signal="button_up" from="MenuButton" to="." method="_on_MenuButton_button_up"]
[connection signal="visibility_changed" from="GameInfo" to="." method="_on_GameInfo_visibility_changed"]
